--- a/.gitignore
+++ b/.gitignore
@@ -56,5 +56,11 @@ sysinfo.txt
 /Assets/Plugins/x86_64.meta
 /Assets/VRM/
 /Assets/VRM.meta
+/Assets/VRM.Samples/
+/Assets/VRM.Samples.meta
+/Assets/VRMLoaderUI/
+/Assets/VRMLoaderUI.meta
 /Assets/Standard Assets/
 /Assets/Standard Assets.meta
+/Assets/StreamingAssets/
+/Assets/StreamingAssets.meta
